--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ description = 'An extension to the concordion:run command to run specifications 
 // }
 
 dependencies {
-    implementation     'com.google.guava:guava:18.0',
+    implementation     'com.google.guava:guava:30.1.1-jre',
                        'org.slf4j:slf4j-api:1.7.10'
     testImplementation 'org.concordion:concordion-logging-tooltip-extension:1.1.2'
     testRuntimeOnly    'org.slf4j:slf4j-simple:1.7.10'
